# langchain_poc

./: .env  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: pipeline.yml
api/: main.py
